faz parte do curso que adiciona roles pros usuários da clínica